--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+ <meta charset="UTF-8">
+    <title>Padmini Venkata Krishna| Technical Communication Specialist</title>
+<link rel="stylesheet" href="style.css">
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
 <body>
-<h1>Hello World</h1>
+ <!-- Move to top button -->
+  <div class="scroll-button">
+    <a href="#top"><i class="fas fa-arrow-up"></i></a>
+  </div>
+<h1 id="top">Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
